--- a/index.html
+++ b/index.html
@@ -5,9 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <title>Full Stack Portfolio</title>
+    <title>Stylish Form</title>
   </head>
   <body>
-
+    <form class="form center-wrapper seven-rows" action="">
+      <h1>Say Hello!</h1>
+      <div class="border-bottom-grey">
+        <label for="your-name"><h2>Your Name</h2></label>
+        <input type="text" minlength="2" required name="name" id="name" placeholder="Enter your name">
+      </div>
+      <div class="border-bottom-grey">
+        <label for="email"><h2>Email</h2></label>
+        <input type="email" minlength="2" required name="email" id="email" placeholder="Enter your email address">
+      </div>
+      <div class="border-bottom-grey">
+        <label for="needed-services"><h2>Needed Services</h2></label>
+        <select required type="text" name="services" id="services">
+          <optgroup>
+            <option value="choose-services">Choose Services</option>
+            <option value="front-end">Front End</option>
+            <option value="back-end">Back End</option>
+            <option value="full-stack">Full Stack</option>
+          </optgroup>
+        </select>
+      </div>
+      <div class="border-bottom-grey">
+        <label for="budget"><h2>Budget</h2></label>
+        <select required type="number" name="budget" id="budget">
+          <optgroup>
+            <option value="select-budget ">Select Budget</option>
+            <option value="million">€1,000,000</option>
+            <option value="billion">€1,000,000,000</option>
+            <option value="trillion">€1,000,000,000,000</option>
+            <option value="quintillion">€1,000,000,000,000,000,000</option>
+          </optgroup>
+        </select>
+      </div>
+      <div class="border-bottom-grey">
+        <label for="message"><h2>Message</h2></label>
+        <textarea class="message-box" type="text" name="message" id="message">Your message here...</textarea>
+      </div>
+      <button type="submit">Submit &#8594;</button>
+    </form>
   </body>
 </html>
